imgiises some done

--- a/index.html
+++ b/index.html
@@ -263,33 +263,33 @@
                         </div>
                         <div class="imagiss">
                                 <div class="img_card">
-                                        <img src="/images/trainer1.png" alt="Trainer">
+                                        <img src="./images/./trainer1.png" alt="Trainer">
                                         <h5>Jerome</h5>
                                         <p>Trainer</p>
                                 </div>
                                 <div class="img_card">
-                                        <img src="/images/trainer2.png" alt="Trainer">
+                                        <<img src="./images/./trainer2.png" alt="Trainer">
+                                        <h5>Gamero Willi</h5>
+                                        <p>Trainer</p>
+                                </div>
+                                <div class="img_card">
+                                        <img src="./images/./trainer3.png"alt="Trainer">
+                                        <h5>Darrell Sreward</h5>
+                                        <p>Trainer</p>
+                                </div>
+                                <div class="img_card">
+                                        <img src="./images/./trainer4.png"alt="Trainer">
                                         <h5>Jerome</h5>
                                         <p>Trainer</p>
                                 </div>
                                 <div class="img_card">
-                                        <img src="/images/trainer3.png" alt="Trainer">
-                                        <h5>Jerome</h5>
-                                        <p>Trainer</p>
-                                </div>
-                                <div class="img_card">
-                                        <img src="/images/trainer4.png" alt="Trainer">
-                                        <h5>Jerome</h5>
-                                        <p>Trainer</p>
-                                </div>
-                                <div class="img_card">
-                                        <img src="/images/trainer5.png" alt="Trainer">
-                                        <h5>Jerome</h5>
+                                        <img src="./images/./trainer5.png" alt="Trainer">
+                                        <h5>Dianne Russell</h5>
                                         <p>Trainer</p>
                                 </div>
                                 <div class="img_card">
                                         <img src="/images/trainer6.png" alt="Trainer">
-                                        <h5>Jerome</h5>
+                                        <h5>Cody Finsher</h5>
                                         <p>Trainer</p>
                                 </div>
                         </div>
