--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                         <p>Trainer</p>
                                 </div>
                                 <div class="img_card">
-                                        <img src="/images/./trainer6.png" alt="Trainer">
+                                        <img src="./images/./trainer6.png" alt="Trainer">
                                         <h5>Cody Finsher</h5>
                                         <p>Trainer</p>
                                 </div>
